# brakerscalp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  roadmap.md
config/: universe.json
deploy/prometheus/: prometheus.yml
deploy/redis/: redis.conf
src/brakerscalp/: __init__.py  config.py  logging.py  metrics.py  serialization.py  universe.py
src/brakerscalp/app/: api.py  bot.py  collector.py  common.py  engine.py  order_flow.py
src/brakerscalp/domain/: models.py
src/brakerscalp/exchanges/: base.py  binance.py  bybit.py  factory.py  okx.py
src/brakerscalp/services/: api_service.py  bot_service.py  collector_service.py  daily_summary.py  engine_service.py  market_inspector.py  order_flow_service.py
src/brakerscalp/signals/: charting.py  engine.py  indicators.py  levels.py  orderflow.py  rendering.py
src/brakerscalp/storage/: cache.py  db.py  models.py  repository.py
tests/: conftest.py  test_api_service.py  test_bot_service.py  test_collector_service.py  test_config.py  test_daily_summary.py  test_exchange_contracts.py  test_indicators.py  test_integration_flow.py  test_levels.py  test_orderflow.py  test_orderflow_service.py  test_persistence.py  test_rendering.py  test_replay.py  test_signal_engine.py
tests/fixtures/: binance_book.json  bybit_book.json  okx_book.json
