[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brakerscalp"
version = "0.1.0"
description = "Telegram alert bot for breakout and bounce crypto setups."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "SMA" }]
dependencies = [
  "aiogram>=3.13,<4",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "matplotlib>=3.10,<4",
  "numpy>=1.26,<3",
  "orjson>=3.10,<4",
  "pandas>=2.2,<3",
  "prometheus-client>=0.20,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.3,<3",
  "python-dateutil>=2.9,<3",
  "redis[hiredis]>=5,<6",
  "sqlalchemy>=2.0,<3",
  "structlog>=24,<25",
  "uvicorn[standard]>=0.30,<1",
  "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.23,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<1",
  "respx>=0.21,<1",
]

[project.scripts]
brakerscalp-collector = "brakerscalp.app.collector:main"
brakerscalp-engine = "brakerscalp.app.engine:main"
brakerscalp-bot = "brakerscalp.app.bot:main"
brakerscalp-api = "brakerscalp.app.api:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
